added State handler and co

--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "ExtensibleEffects"
 uuid = "67377c25-f533-4d0b-9328-1721380cc1f1"
 authors = ["s.sahm "]
 version = "0.1.0"
+
+[deps]
+TypeClasses = "addcc920-e0cf-11e8-30b7-0fb08706b574"
