--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,7 @@ authors = ["s.sahm "]
 version = "0.1.0"
 
 [deps]
+DataTypesBasic = "83eed652-29e8-11e9-12da-a7c29d64ffc9"
+ExprParsers = "c5caad1f-83bd-4ce8-ac8e-4b29921e994e"
+Monadic = "4a6f0533-cc52-4fcf-a409-c6c05775ac80"
 TypeClasses = "addcc920-e0cf-11e8-30b7-0fb08706b574"
