--- a/Project.toml
+++ b/Project.toml
@@ -13,13 +13,13 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TypeClasses = "addcc920-e0cf-11e8-30b7-0fb08706b574"
 
 [compat]
-Compat = "2.1, 3"
+Compat = "2.1, 3, 4"
 DataTypesBasic = "1.0, 2"
 ExprParsers = "1"
-julia = "1.6"
 Monadic = "1"
 Reexport = "1"
 TypeClasses = "1.1"
+julia = "1.6"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
